# dune-grid-glue

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CHANGES  CMakeLists.txt  COPYING  Makefile.am  README  README.md  TODO  config.h.cmake  configure.ac  dune-grid-glue.pc.in  dune.module  runfirst.sh
LICENSES/: LicenseRef-GPL-2.0-only-with-dune-grid-glue-exception.txt
cmake/pkg/: Makefile.am  dune-grid-glue-config.cmake.in
doc/: CMakeLists.txt  Makefile.am
doc/doxygen/: .gitignore  CMakeLists.txt  Doxyfile.in  Doxylocal  Makefile.am
doc/gfx/: coupling_scenarios.png.license
dune/: CMakeLists.txt  Makefile.am
dune/glue/: Makefile.am
dune/glue/adapter/: coordinatetransformation.hh  gridglue.hh  gridgluebuilderimpl.hh  gridglueremoteintersectionimpl.hh  gridglueremoteintersectioniteratorimpl.hh  gridgluevtkwriter.hh  remoteintersectioniterators.hh  simplexgeometry.hh
dune/glue/common/: conceptchecking.hh
dune/glue/extractors/: Makefile.am  codim0extractor.hh  cubemeshextractor.hh  cubesurfaceextractor.hh  extractor.hh  extractorselector.hh  generalsurfaceextractor.hh  parallelextractor.hh  simplicialmeshextractor.hh  simplicialsurfaceextractor.hh  vtksurfacewriter.hh
dune/glue/merging/: Makefile.am  cgalmerge.hh  conformingmerge.hh  merger.hh  psurfacemerge.hh  standardmerge.hh
dune/glue/misc/: Makefile.am  box.hh  geometry.hh  multidimoctree.hh  orientedsubface.hh
dune/glue/test/: Makefile.am  couplingtest.hh  mixeddimcouplingtest.cc  orientedsubfacetest.cc  overlappingcouplingtest.cc
dune/grid-glue/: CMakeLists.txt  Makefile.am  gridglue.hh
dune/grid-glue/adapter/: CMakeLists.txt  Makefile.am  gridglue.cc  gridglue.hh  gridglueamirawriter.hh  gridgluebuilderimpl.hh  gridgluecommunicate.hh  gridglueremoteintersection.hh  gridglueremoteintersectionimpl.hh  gridglueremoteintersectioniterator.hh  gridglueremoteintersectioniteratorimpl.hh  gridgluevtkwriter.hh  gridgluevtkwriterroot.hh  intersection.hh  intersectionindexset.hh  intersectioniterator.hh  rangegenerators.hh  remoteintersection.hh  remoteintersectioniterators.hh  simplexgeometry.hh
dune/grid-glue/common/: CMakeLists.txt  Makefile.am  areawriter.hh  areawriter_impl.hh  box.hh  crossproduct.hh  multidimoctree.hh  multivector.hh  orientedsubface.hh  projection.hh  projection_impl.hh  projectionhelper.hh  projectionwriter.hh  projectionwriter_impl.hh  ringcomm.hh  simplexgeometry.hh
dune/grid-glue/extractors/: CMakeLists.txt  Makefile.am  codim0extractor.hh  codim1extractor.hh  cubesurfaceextractor.hh  extractor.hh  extractorpredicate.hh  extractorpredicates.hh  extractorselector.hh  generalsurfaceextractor.hh  gridextractiontraits.hh  parallelextractor.hh  simplicialsurfaceextractor.hh  surfacedescriptor.hh  vtksurfacewriter.hh
dune/grid-glue/merging/: CMakeLists.txt  Makefile.am  cgalmerge.cc  cgalmerge.hh  cgalmergeimp.cc  cgalmergeimp.hh  computeIntersection.hh  computeintersection.cc  computeintersection.hh  conformingmerge.hh  contactmerge.cc  contactmerge.hh  intersectionlist.hh  merger.hh  mixeddimoverlappingmerge.hh  overlappingmerge.cc  overlappingmerge.hh  psurfacemerge.cc  psurfacemerge.hh  remotesimplicialintersection.hh  simplexintersection.cc  standardmerge.cc  standardmerge.hh
dune/grid-glue/test/: .gitignore  CMakeLists.txt  Makefile.am  callmergertwicetest.cc  communicationtest.hh  computecyclicordertest.cc  couplingtest.hh  disconnectedtest.cc  inexactinverseprojection.cc  mixeddimcouplingtest.cc  mixeddimoverlappingtest.cc  mixeddimoverlappingtest3D.cc  mixeddimscalingtest.cc  multivectortest.cc  nonoverlappingcouplingtest.cc  orientedsubfacetest.cc  overlappingcouplingtest.cc  projectionhelpertest.cc  projectiontest.cc  ringcommtest.cc
examples/: CMakeLists.txt  contactmerge.cc
glue/: Makefile.am
glue/adapter/: CoordinateTransformation.hh  GridGlue.hh  GridGlueBuilderImpl.hh  GridGlueRemoteIntersectionImpl.hh  GridGlueRemoteIntersectionIteratorImpl.hh  GridGlueVtkWriter.hh  Makefile.am  RemoteIntersection.hh  RemoteIntersectionConcepts.hh  RemoteIntersectionIterators.hh  SimplexGeometry.hh  gridglue.hh  gridgluebuilderimpl.hh  gridgluecommunicate.hh  gridglueremoteintersectionimpl.hh  gridglueremoteintersectioniteratorimpl.hh  gridgluevtkwriter.hh  remoteintersection.hh  remoteintersectioniterators.hh  simplexgeometry.hh
glue/extractors/: codim0extractor.hh  codim1extractor.hh  cubemeshextractor.hh  cubesurfaceextractor.hh  extractor.hh  extractorselector.hh  generalsurfaceextractor.hh  gridextractiontraits.hh  gridextractorconcept.hh  parallelextractor.hh  simplicialmeshextractor.hh  simplicialsurfaceextractor.hh  vtksurfacewriter.hh
glue/merging/: ContactMappingSurfaceMerge.hh  Makefile.am  SurfaceMerge.hh  SurfaceMergeConcept.hh  conformingmerge.hh  merger.hh  psurfacemerge.hh  surfacemerge.hh  surfacemergeconcept.hh
glue/misc/: Box.hh  Makefile.am  MultiDimOctree.hh  Timer.hh  geometry.h  geometry.hh  orientedsubface.hh
glue/surfaces/: CubeManifoldExtractor.hh  CubeMeshExtractor.hh  CubeSurfaceExtractor.hh  ExtractorSelector.hh  GeneralSurfaceExtractor.hh  GridExtractionTraits.hh  GridExtractor.hh  GridExtractorConcept.hh  GridMeshTraits.hh  Makefile.am  SimplicialManifoldExtractor.hh  SimplicialMeshExtractor.hh  SimplicialSurfaceExtractor.hh  SurfaceDescriptor.hh  VtkSurfaceWriter.hh  codim0extractor.hh  codim1extractor.hh  cubemanifoldextractor.hh  cubemeshextractor.hh  cubesurfaceextractor.hh  extractorselector.hh  generaledgeextractor.hh  generalsurfaceextractor.hh  gridextractiontraits.hh  gridextractor.hh  gridextractorconcept.hh  parallelextractor.hh  simplicialmanifoldextractor.hh  simplicialmeshextractor.hh  simplicialsurfaceextractor.hh  vtksurfacewriter.hh
glue/test/: .gitignore  Makefile.am  couplingtest.cc  couplingtest.hh  mixeddimcouplingtest.cc  nonoverlappingcouplingtest.cc  orientedsubfacetest.cc  overlappingcouplingtest.cc
lib/: .gitignore  Makefile.am
m4/: CMakeLists.txt  Makefile.am  cgal.m4  dune-grid-glue.m4
