# $Id: Makefile.am 4229 2009-03-16 14:41:32Z chupa $

# These libraries do not need other libraries besides lcommon and lgrid
mergingdir = $(includedir)/dune/glue/merging
merging_HEADERS = ContactMappingSurfaceMerge.hh\
	SurfaceMerge.hh\
	SurfaceMergeConcept.hh

include $(top_srcdir)/am/global-rules
