# $Id: Makefile.am 4229 2009-03-16 14:41:32Z chupa $

# These libraries do not need other libraries besides lcommon and lgrid
surfacesdir = $(includedir)/dune/glue/surfaces
surfaces_HEADERS = GridExtractor.hh\
	GridExtractorConcept.hh\
	ExtractorSelector.hh\
	GeneralSurfaceExtractor.hh\
	SimplicialManifoldExtractor.hh\
	SimplicialMeshExtractor.hh\
	SimplicialSurfaceExtractor.hh\
	CubeManifoldExtractor.hh\
	CubeMeshExtractor.hh\
	CubeSurfaceExtractor.hh\
	SurfaceDescriptor.hh\
	GridExtractionTraits.hh\
	VtkSurfaceWriter.hh

include $(top_srcdir)/am/global-rules
