# $Id: Makefile.am 4229 2009-03-16 14:41:32Z chupa $

# These libraries do not need other libraries besides lcommon and lgrid
surfacesdir = $(includedir)/dune/glue/surfaces
surfaces_HEADERS = gridextractor.hh\
	gridextractorconcept.hh\
	extractorselector.hh\
	generalsurfaceextractor.hh\
	simplicialmanifoldextractor.hh\
	simplicialmeshextractor.hh\
	simplicialsurfaceextractor.hh\
	cubemanifoldextractor.hh\
	cubemeshextractor.hh\
	cubesurfaceextractor.hh\
	surfacedescriptor.hh\
	gridextractiontraits.hh\
	VtkSurfaceWriter.hh

include $(top_srcdir)/am/global-rules
