# $Id: Makefile.am 4229 2009-03-16 14:41:32Z chupa $

# These libraries do not need other libraries besides lcommon and lgrid
adapterdir = $(includedir)/dune/glue/adapter
adapter_HEADERS = coordinatetransformation.hh\
	gridglue.hh\
	gridglueremoteintersection.hh\
	gridglueremoteintersectioniterator.hh\
	gridgluevtkwriter.hh\
	simplexgeometry.hh

include $(top_srcdir)/am/global-rules
