# $Id: Makefile.am 4229 2009-03-16 14:41:32Z chupa $

# These libraries do not need other libraries besides lcommon and lgrid
adapterdir = $(includedir)/dune/glue/adapter
adapter_HEADERS = \
	gridglue.hh\
	gridgluevtkwriter.hh\
	intersection.hh\
	intersectioniterator.hh

EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
