# These libraries do not need other libraries besides lcommon and lgrid
adapterdir = $(includedir)/dune/grid-glue/adapter
adapter_HEADERS = \
	gridglue.cc \
	gridglue.hh\
    gridgluecommunicate.hh \
	gridgluevtkwriter.hh\
	intersection.hh\
	intersectionindexset.hh\
	intersectioniterator.hh \
	rangegenerators.hh

EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
