commondir = $(includedir)/dune/grid-glue/common

common_HEADERS = \
                 crossproduct.hh \
                 multivector.hh \
                 projection.hh \
                 projection_impl.hh \
                 projectionwriter.hh \
                 projectionwriter_impl.hh

EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
