# $Id: Makefile.am 4229 2009-03-16 14:41:32Z chupa $

# These libraries do not need other libraries besides lcommon and lgrid
surfacesdir = $(includedir)/dune/glue/surfaces
surfaces_HEADERS = codim0extractor.hh codim1extractor.hh extractor.hh \
        extractorselector.hh\
	generalsurfaceextractor.hh\
	simplicialsurfaceextractor.hh\
	cubesurfaceextractor.hh\
	extractorpredicates.hh\
	gridextractiontraits.hh\
        parallelextractor.hh \
	vtksurfacewriter.hh

include $(top_srcdir)/am/global-rules
