# $Id: Makefile.am 4229 2009-03-16 14:41:32Z chupa $

extractorsdir = $(includedir)/dune/glue/extractors
extractors_HEADERS = codim0extractor.hh codim1extractor.hh extractor.hh \
	extractorpredicate.hh\
    parallelextractor.hh \
	vtksurfacewriter.hh

EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
