# $Id: Makefile.am 4229 2009-03-16 14:41:32Z chupa $

# These libraries do not need other libraries besides lcommon and lgrid
mergingdir = $(includedir)/dune/glue/merging
merging_HEADERS = computeintersection.hh \
                  computeintersection.cc \
                  conformingmerge.hh \
                  contactmerge.hh \
                  merger.hh \
                  overlappingmerge.hh \
                  overlappingmerge.cc \
                  psurfacemerge.hh \
                  psurfacemerge.cc \
                  simplexintersection.cc \
                  standardmerge.hh

include $(top_srcdir)/am/global-rules
