# These libraries do not need other libraries besides lcommon and lgrid
mergingdir = $(includedir)/dune/grid-glue/merging
merging_HEADERS = computeintersection.hh \
                  computeintersection.cc \
                  conformingmerge.hh \
                  contactmerge.hh \
                  contactmerge.cc \
                  merger.hh \
                  overlappingmerge.hh \
                  overlappingmerge.cc \
                  psurfacemerge.hh \
                  psurfacemerge.cc \
                  simplexintersection.cc \
                  standardmerge.hh

include $(top_srcdir)/am/global-rules
